# modern-cpp

./: .gitignore  CMakeLists.txt  README.md  conan.sh  conanfile.py  requirements.md
examples/: calculator_client.cpp
src/: calculator.cpp  calculator_server.cpp  calculator_server_main.cpp  calculator_service.cpp
src/include/calculator/: calculator.hpp  calculator_service.hpp
src/protos/: calculator.proto
tests/: calculator_service_test.cpp  calculator_test.cpp
